--- a/Views/Structure/Acceuil.cshtml
+++ b/Views/Structure/Acceuil.cshtml
@@ -3,10 +3,26 @@
     Layout = "_Acceuil";
 }
 
-    
-       
-        
-            <main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Dashboard - SB Admin</title>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7/css/sb-admin-2.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css'>
+    <link rel='stylesheet' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/416491/timeline.css'>
+    <link href="~/css/dashboard.css" rel="stylesheet" />
+
+</head>
+
+    <main>
                 <div class="container-fluid px-4">
                     <div class="card-head p-3 d-flex justify-content-between">
                         <h1 class="mt-4">Dashboard</h1>
@@ -22,7 +38,7 @@
                     <div class="row">
                         <!-- /.row -->
                         <div class="row">
-                            <div class="col-lg-4 col-md-4">
+                            <div class="col-lg-4 col-md-6">
                                 <div class="panel panel-primary">
                                     <div class="panel-heading">
                                         <div class="row">
@@ -98,34 +114,9 @@
                         @*---------------End-----------------*@
 
 
-@*                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-primary text-white mb-4">
-                                <div class="card-body">Gestion Publication</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" asp-action="Index" asp-controller="Publication">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-success text-white mb-4">
-                                <div class="card-body">Gestion Structure</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" asp-action="Index" asp-controller="Structure">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-danger text-white mb-4">
-                                <div class="card-body">Setting Management</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between ">
-                                    <a class="small text-white stretched-link" asp-action="SettingManagement">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>*@
+        
                     </div>
                 </div>
-            </main>
+    </main>
+</html>
     
