--- a/Views/Dashboard/Acceuil.cshtml
+++ b/Views/Dashboard/Acceuil.cshtml
@@ -64,40 +64,14 @@
 
 
                 <li>
-                    <a href="#">
+                    <a href="/Produit/Index">
                         <span class="icon">
-                            <ion-icon name="chatbubble-outline"></ion-icon>
+                            <i class="bi bi-list-check"></i>
                         </span>
                         <span class="title">Produits</span>
                     </a>
                 </li>
-
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <ion-icon name="help-outline"></ion-icon>
-                        </span>
-                        <span class="title">Help</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <ion-icon name="settings-outline"></ion-icon>
-                        </span>
-                        <span class="title">Settings</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span class="icon">
-                            <ion-icon name="lock-closed-outline"></ion-icon>
-                        </span>
-                        <span class="title">Password</span>
-                    </a>
-                </li>
+                
 
                 <li>
                     <a href="#">
@@ -130,7 +104,7 @@
             </div>
 
             <!-- ======================= Cards ================== -->
-            <div class="cardBox">
+       @*     <div class="cardBox">
                 <div class="card">
                     
                     <div class="iconBx">
@@ -143,7 +117,7 @@
                         <ion-icon name="chatbubbles-outline"></ion-icon>
                     </div>
                 </div>
-            </div>
+            </div>*@
             <!-- ================ Order Details List ================= 
             <div class="recentCustomers">
                 <div class="cardHeader">
