--- a/wwwroot/css/UserAcceuil.css
+++ b/wwwroot/css/UserAcceuil.css
@@ -1,7 +1,7 @@
 ﻿
 /* =========== Google Fonts ============ */
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
-/* =============== Globals ============== */
+/* =============== Globals #1B2631==============#2a2185 */
 * {
     font-family: "Ubuntu", sans-serif;
     margin: 0;
@@ -10,8 +10,8 @@
 }
 
 :root {
-    --blue: #2a2185;
-    --white: #fff;
+    --blue: #0B5345;
+    --white: #F8F9F9;
     --gray: #f5f5f5;
     --black1: #222;
     --black2: #999;
@@ -20,6 +20,9 @@
 body {
     min-height: 100vh;
     overflow-x: hidden;
+}
+.card-header {
+    background: var(--blue)
 }
 
 .container {
