--- a/Views/Publication/Index.cshtml
+++ b/Views/Publication/Index.cshtml
@@ -2,6 +2,7 @@
 @using ChimieProject.Models.Entities
 @using System.Collections
 @{
+    //ViewBag Publication >> EchangeLot
     var objEchangeLotList = ViewBag.objEchangeLotList;
     Layout = "_Acceuil";
 
