--- a/Views/Shared/_Acceuil.cshtml
+++ b/Views/Shared/_Acceuil.cshtml
@@ -124,13 +124,13 @@
             </nav>
             </div>
         </div>
-    <div id="layoutSidenav">
-    <div class="container">
+   
+    <div class="container" id="layoutSidenav">
             <main role="main" class="pb-3" id="layoutSidenav_content">
             @RenderBody()
         </main>
     </div>
-    </div>
+  
     <br />
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -138,17 +138,6 @@
         </div>
     </footer>
  
-
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
-
-    <script src='https://code.jquery.com/jquery-3.1.0.js'></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.1/raphael.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7/js/sb-admin-2.js'></script>
-    <script src='https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js'></script>
-
     @*custom*@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="~/js/Dashboard.js"></script>
