--- a/Views/Shared/_UserUI.cshtml
+++ b/Views/Shared/_UserUI.cshtml
@@ -5,15 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ChimieProject</title>
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-   @*
+   @* <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />*@
+   
     <link rel="stylesheet" href="~/css/UserAcceuil.css" asp-append-version="true" />
 
-   *@
+   
     @*--fontAwesome--*@
     <link rel="stylesheet" href="~/font-awesome/css/all.css" asp-append-version="true" />
     @*--fontAwesome--*@
     <link rel="stylesheet" href="~/ChimieProject.styles.css" asp-append-version="true" />
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    @*    ----------------------------------------------------------------[Test Boostrap Version]-------------------------------------------------------------------------*@
+    <!-- Latest compiled and minified CSS -->
+    <link href="~/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/bootstrap-3.3.7-dist/css/bootstrap-theme.css" rel="stylesheet" />
+    <link href="~/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" rel="stylesheet" />
+
+
+    @*    ----------------------------------------------------------------[Test Boostrap Version]-------------------------------------------------------------------------*@
+
+    <!-- Adding W3.CSS file through external link -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- ======= Styles ====== -->
+    <link rel="stylesheet" href="~/css/UserAcceuil.css">
+    <link href="~/css/publication.css" rel="stylesheet" />
+    @* <link href="~/css/test.css" rel="stylesheet" />*@
 </head>
 <body>
     <header>
@@ -27,6 +48,13 @@
 
 
 
+    <!-- =========== Scripts =========  -->
+    <script src="~/js/UserAcceuil.js"></script>
+    <script src="~/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <script src="~/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <!-- ====== ionicons ======= -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="~/js/site.js" asp-append-version="true"></script>
