--- a/Views/Dashboard/Upsert.cshtml
+++ b/Views/Dashboard/Upsert.cshtml
@@ -1,35 +1,37 @@
 ﻿@model ChimieProject.Models.Entities.Publication;
 @{
 
-    //Layout = "_Acceuil";
+    Layout = "_Layout";
 
     var objProduitList = ViewBag.objProduitList;
 
-    var objLaboratoireList = ViewBag.objLaboratoireList;
+    var currentUser = ViewBag.currentUser;
 }
-
+<partial name="_Notification">
     <div class="border container" style="padding:30px;">
-        <form method="post" asp-action="Edit" asp-controller="Publication">
+        <form method="post" asp-action="Upsert" asp-controller="Dashboard">
+            @if (Model.Id != 0)
+            {
+                <input type="hidden" asp-for="Id" />
+            }
             <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+
             <div class="row pb-2">
-                <h2 class="text-primary">Edit</h2>
+                <h2 class="text-primary">@(Model.Id != 0 ? "Edition" : "Creation")Create</h2>
                 <hr />
             </div>
-
+          
             @*Labo Liste*@
             <div class="row mb-3">
                 <label asp-for="IdLabo" class="col-sm-2 col-form-label">Non du Labratoire</label>
                 <div class="col-sm-10">
-                    <select asp-for="IdLabo" class="form-select" aria-label="Default select example">
-                        <option selected>ouvrir ce menu de sélection</option>
-                        @foreach (var lab in @objLaboratoireList)
-                        {
-                            <option value="@lab.Id">@lab.Nom</option>
-                        }
+                    <select asp-for="IdLabo" class="form-select" aria-label="Default select example" readonly="readonly">
+                        <option asp-for="IdLabo" value="@currentUser.Id">@currentUser.Nom</option>
                     </select>
                     <span asp-validation-for="IdLabo" class="text-danger"></span>
                 </div>
             </div>
+
             @*fin*@
 
             @*Produit Liste*@
@@ -41,12 +43,17 @@
                         @foreach (var product in @objProduitList)
                         {
                             <option value="@product.Id">@product.Nom</option>
+                            ViewBag.productName = @product.Nom;
                         }
                     </select>
                     <span asp-validation-for="IdProduit" class="text-danger"></span>
                 </div>
             </div>
+
+
+
             @*fin*@
+            @*==*@
             <div class="row mb-3">
                 <label asp-for="Type" class="col-sm-2 col-form-label">Type Echange</label>
                 <div class="col-sm-10">
@@ -58,6 +65,7 @@
                     <span asp-validation-for="Type" class="text-danger"></span>
                 </div>
             </div>
+            @*==*@
 
             <div class="row mb-3">
                 <label asp-for="DatePublication" class="col-sm-2 col-form-label"></label>
@@ -97,30 +105,61 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="UniteQuantite " class="col-sm-2 col-form-label"></label>
+                <label asp-for="UniteQuantite" class="col-sm-2 col-form-label">L'unité de la quantité</label>
                 <div class="col-sm-10">
 
-                    @*=========*===========================[Modified this after]=====================================================================*@
-   
+                    @foreach (var item in objProduitList)
+                    {
+
+                        if (item.Nom == ViewBag.productName)
+                        {
+
+
+                            if (item.EtatPhysique == "LIQUIDE")
+                            {
                                 <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
                                     <option selected>ouvrir</option>
                                     <option value="Cl">Centilitre</option>
                                     <option value="Ml">Millilitre</option>
                                     <option value="l">Litre</option>
                                 </select>
-                       
-                         <span asp-validation-for="UniteQuantite" class="text-danger"></span>
-                    @*=========*===========================[Modified this after]=====================================================================*@
+                            }
+                            else if (item.EtatPhysique == "SOLIDE")
+                            {
+                                <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
+                                    <option selected>ouvrir</option>
+                                    <option value="Cg">Centigramme</option>
+                                    <option value="Mg">Milligramme</option>
+                                    <option value="g">gramme</option>
+                                </select>
+                            }
+                            else if (item.EtatPhysique == "GAZEUX")
+                            {
+                                <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
+                                    <option selected>ouvrir</option>
+                                    <option value="cm³">Centimètre Cube</option>
+                                    <option value="mm³">Millimètre Cube</option>
+                                    <option value="m³">Mètre cube </option>
+                                </select>
+                            }
+
+                        }
+                        else
+                        {
+
+                        }
+                    }
+                    <span asp-validation-for="UniteQuantite" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-3 offset-3">
                     <button type="submit" class="btn btn-primary form-control">
-                        Modifier
+                        @(Model.Id != 0 ? "Modifier" : "Ajouter")
                     </button>
                 </div>
                 <div class="col-3">
-                    <a asp-action="Index" asp-controller="Publication" class="btn btn-success form-control">Retour a la Liste</a>
+                    <a asp-action="Acceuil" asp-controller="Dashboard" class="btn btn-success form-control">Retour a la Liste</a>
                 </div>
             </div>
         </form>
@@ -130,4 +169,5 @@
             <partial name="_ValidationScriptsPartial" />
         }
     }
+
 
