--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - ChimieProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - ChimieProject - adda issa <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
@@ -56,7 +56,6 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Login.js" asp-append-version="true"></script>
     <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js" asp-append-version="true"></script>
-    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
