--- a/Views/Structure/Acceuil.cshtml
+++ b/Views/Structure/Acceuil.cshtml
@@ -21,13 +21,13 @@
     <link href="~/css/dashboard.css" rel="stylesheet" />
 
 </head>
-
+<body>
     <main>
                 <div class="container-fluid px-4">
                     <div class="card-head p-3 d-flex justify-content-between">
                         <h1 class="mt-4">Dashboard</h1>
                        
-                        <button type="button" class="btn btn-primary mt-4 p-3" >Backup</button>
+                       <button class="btn btn-success" id="btnBeginBackup" style="margin-top:20px">Take Backup</button>
                        
                     </div>
                     <ol class="breadcrumb mb-4">
@@ -118,5 +118,42 @@
                     </div>
                 </div>
     </main>
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
+
+    <script src='https://code.jquery.com/jquery-3.1.0.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.1/raphael.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7/js/sb-admin-2.js'></script>
+    <script src='https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js'></script>
+
+</body>
 </html>
+    @section Scripts{
+        @{
+            <partial name="_ValidationScriptsPartial" />
+
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        }
+    <script>
+        $(document).on('click', '#btnBeginBackup', function (e) {
+            $.ajax({
+                url: '/Backup/GenerateBackupFile',
+                type: 'GET',
+                success: function (res) {
+                    //hideLoader();
+                    if (res)
+                        alert("Backup taken successfully and  files Uploaded on Google Drive ");
+                    else
+                        alert("Backup failed");
+                },
+                error: function (err) {
+                    //hideLoader();
+                    alert("Something went wrong. Please contact administrator");
+                }
+            });
+        });
+    </script>
+}
     
